# fastapi-practice

./: .gitignore  .pre-commit-config.yaml  docker-compose.yaml  pyproject.toml
api/: Dockerfile  main.py  pyproject.toml
api/routers/: health.py
api/routers/test/routes/: tests.py
api/routers/users/models/: user.py
nginx/: Dockerfile  default.conf  nginx.conf
