[project]
name = "fastapiapi"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]<1.0.0,>=0.114.2",
    "python-multipart<1.0.0,>=0.0.7",
    "alembic<2.0.0,>=1.12.1",
    "psycopg[binary]<4.0.0,>=3.1.13",
    "sqlmodel<1.0.0,>=0.0.21",
    "orjson>=3.10.15",
    "sqlalchemy>=2.0.38",
    "sqlalchemy-utils>=0.41.2",
    "gunicorn>=23.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest<8.0.0,>=7.4.3",
    "mypy<2.0.0,>=1.8.0",
    "pre-commit<4.0.0,>=3.6.2",
    "coverage<8.0.0,>=7.4.3",
]


[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]
